--- a/src/scss/00_settings/_settings.colors.scss
+++ b/src/scss/00_settings/_settings.colors.scss
@@ -1,17 +1,21 @@
 $global-colors: (
   "anthracite": "75,75,75",
+  "blue-darker": "0,72,113",
   "blue-dark": "12,120,171",
   "blue": "15,147,209",
   "grey-dark": "50,50,50",
   "grey-light": "240,240,240",
   "grey": "174,174,174",
+  "red-darker": "104,0,0",
   "red-dark": "185,75,60",
   "red": "221,87,70",
   "success": "140,201,111",
+  "turquoise-darker": "15,54,69",
   "turquoise-dark": "42,109,111",
   "turquoise": "57,145,147",
   "warning": "244,195,67",
   "white": "255,255,255",
+  "yellow-darker": "124,60,0",
   "yellow-dark": "189,125,32",
   "yellow": "227,151,38",
 );
