--- a/src/scss/05_components/_components.notes.scss
+++ b/src/scss/05_components/_components.notes.scss
@@ -1,13 +1,18 @@
 .lia-notes {
   display: flex;
   flex-direction: column;
-  height: 14.2rem;
+  max-height: 14.2rem;
+  height: 100%;
   max-width: 144rem;
   overflow: hidden auto;
   position: relative;
   width: $notes-width-mobile;
 
   background-color: rgb(var(--lia-grey-light));
+
+  @include breakpoint("sm") {
+    height: calc(14.2rem - 7rem);
+  }
 
   @include breakpoint("md") {
     margin: 0 3rem;
@@ -17,12 +22,17 @@
     background-color: transparent;
     height: auto;
     margin: 0;
+    max-height: 100%;
     width: 100%;
   }
 
   &__content {
     background-color: rgb(var(--lia-grey-light));
-    padding: 2.3rem;
+    padding: 0 2.3rem 2.3rem;
+
+    @include breakpoint("lg") {
+      padding-top: 2.3rem;
+    }
 
     &:nth-child(2n) {
       padding: 0 2.3rem;
