--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -10,7 +10,9 @@
 
   @include breakpoint("sm") {
     align-items: center;
+    height: 7rem;
     flex-direction: row;
+    padding: 0;
   }
 
   @include breakpoint("md") {
