--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -16,12 +16,9 @@ fieldset {
   margin-bottom: map-get($global-spacing, spacing-normal);
 }
 
-input,
-button {
-  &:focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(var(--color-highlight), 0.15);
-  }
+:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(var(--color-highlight), 0.15) !important;
 }
 
 .lia-btn,
