--- a/src/scss/04_objects/_objects.animations.scss
+++ b/src/scss/04_objects/_objects.animations.scss
@@ -1,12 +1,12 @@
-@keyframes spin {
+@keyframes rotating {
   100% {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-.spin {
-  animation: spin;
+.rotating {
+  animation: rotating 1s linear infinite;
 }
 
 @keyframes show-comment {
