--- a/src/scss/themes.scss
+++ b/src/scss/themes.scss
@@ -10,13 +10,13 @@
     //@include style-btn($theme);
     @include style-card($theme);
     //@include style-input($theme);
-    @include style-code($theme);
+    //@include style-code($theme);
     @include style-link($theme);
     @include style-select($theme);
     @include style-textarea($theme);
 
     // components
-    @include style-accordion($theme);
+    //@include style-accordion($theme);
     @include style-dropdown($theme);
     //@include style-effect-circle($theme);
     @include style-header($theme);
@@ -52,10 +52,6 @@
 
   .lia-icon {
     @include material-icon("", inherit);
-
-    &.rotating {
-      animation: spin 1s linear infinite;
-    }
   }
 }
 
