--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -1,6 +1,7 @@
 .lia-responsive-voice {
   align-items: flex-start;
   background-color: rgb(var(--lia-grey-light));
+  color: rgb(var(--color-highlight));
   display: flex;
   flex-direction: column;
   min-height: 6rem;
