--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -33,6 +33,7 @@ fieldset {
   box-shadow: none;
   display: inline-flex;
   justify-content: flex-start;
+  padding: 0.8rem;
   position: relative;
   vertical-align: top;
 }
