--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -111,8 +111,7 @@ $slide-margin-left-textbook: 19rem !default;
 
     @include breakpoint("md") {
       .lia-slide__content {
-        margin-left: $slide-margin-left-textbook;
-        padding-left: 0;
+        margin-left: calc(#{$slide-margin-left-textbook} - 3rem);
       }
 
       .lia-pagination {
