Hotfix: headlines, toc-link padding, max-height terminal output

--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -149,6 +149,10 @@
         &5 {
           padding-left: 4 * $global-font-size + 3rem;
         }
+
+        &6 {
+          padding-left: 5 * $global-font-size + 3rem;
+        }
       }
     }
   }
