--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -62,6 +62,8 @@
     &__output {
       background-color: rgb(var(--lia-anthracite));
       margin: 0;
+      max-height: 20rem;
+      overflow-y: auto;
       padding: 1rem 1.6rem;
     }
   }
