--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -61,6 +61,7 @@
 // Utilities
 @import "06_utilities/utilities.display";
 @import "06_utilities/utilities.headless";
+@import "06_utilities/utilities.headline";
 @import "06_utilities/utilities.hidden";
 @import "06_utilities/utilities.spacings";
 @import "06_utilities/utilities.text";
